--- a/grid/templates/includes/dealpanels.html
+++ b/grid/templates/includes/dealpanels.html
@@ -97,8 +97,16 @@
 $(document).ready(function () {
     $('.panel .panel-heading a').click(function () {
         $(this).find('span').toggleClass('lm-chevron-circle-down').toggleClass('lm-chevron-circle-up');
-        location.hash = $(this).attr('id');
     });
+    
+    $('#accordion').on('shown.bs.collapse', function (e) {
+        var offset = $(this).find('.collapse.in').prev('.panel-heading');
+        if(offset) {
+            $('html,body').animate({
+                scrollTop: $(offset).offset().top -20
+            }, 500); 
+        }
+    }); 
 });
 </script>
 {% endif %}           {# forms #}
