--- a/grid/templates/change-deal.html
+++ b/grid/templates/change-deal.html
@@ -7,6 +7,7 @@
 {#     <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script> #}
     <script src="{% static "js/editor/add_change.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "js/editor/stakeholder.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "gis/js/OLMapWidget.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 
 
